Update manifest.json with new requirements and translations
Added 'wakeonlan' to requirements and 'translations' to the manifest.

--- a/custom_components/ha_win_wkl/manifest.json
+++ b/custom_components/ha_win_wkl/manifest.json
@@ -5,10 +5,10 @@
   "issue_tracker": "https://github.com/SpLlry/ha_win_wkl/issues",
   "dependencies": [],
   "codeowners": [],
-  "requirements": [],
+  "requirements": ["wakeonlan"],
   "version": "0.0.1",
   "config_flow": true,
-  "translations": [],
+  "translations": ["translations"],
   "release_notes": "https://github.com/SpLlry/ha_win_wkl/releases",
   "hacs": {
     "version": "1.1.3"
@@ -16,4 +16,3 @@
   "image": "https://raw.gitmirror.com/SpLlry/ha_win_wkl/refs/heads/main/icons/ha_win_wkl.png",
   "icon": "/icons/ha_win_wkl.png"
 }
-  
